--- a/index.css
+++ b/index.css
@@ -26,7 +26,7 @@ body{
 }
 .gridcolumn{
     display: grid;
-    grid-template-rows: 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px;
+    grid-template-rows: 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px;
     width: fit-content;
 }
 .returnbox{
